# evolutionary_checkers

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  checkersabprune.h  checkersclient.cpp  checkersdb.sql  checkerstraining.cpp  test_db.cpp  test_gameboard.cpp  travis.sh
doc/: Timings.txt
lib/: gameboard.cpp  gameboard.h  socket.cpp
pbs/: README  checkerstraining8ply30nets.pbs
